--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a shoe bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node monitor.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,17 @@
   },
   "homepage": "https://github.com/kevinrufino/SNK-Y-Bot#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "discord-webhook-node": "^1.0.7",
+    "express": "^4.17.1",
+    "hostile": "^1.3.3",
+    "https-proxy-agent": "^5.0.0",
+    "mongoose": "^5.9.10",
+    "open": "^8.0.1",
     "puppeteer": "^7.1.0",
     "puppeteer-extra": "^3.1.17",
     "puppeteer-extra-plugin-stealth": "^2.7.5",
+    "sudo-prompt": "^9.2.1",
     "user-agents": "^1.0.566"
   }
 }
