--- a/config.json
+++ b/config.json
@@ -10,12 +10,31 @@
         "footerImage": "",
         "timeOfNotification": true
     },
-    "requestTiming": 7052,
-    "__KEYWORDS_EXPLAINED" : "In this default example that I've created the monitor will notify you if find a Nike product in hanon or sensinko site, and it'll notify if find a New Balance or Adidas Yeezy product only in hanon site",
-    "keywords": [["Kim Jones", "Converse"]],
+    "requestTiming": 12052,
+    "__KEYWORDS_EXPLAINED" : [
+        {
+            "url": "deadstock.ca"
+        },
+        {
+            "url": "saintalfred.com"
+        },
+        {
+            "url": "thedarksideinitiative.com"
+        }
+    ],
+    "keywords": [["Kim Jones Chuck 70"]],
     "sites": [
         {
-            "url": "burnrubbersneakers.com"
+            "url": "shopnicekicks.com"
+        },
+        {
+            "url": "deadstock.ca"
+        },
+        {
+            "url": "saintalfred.com"
+        },
+        {
+            "url": "thedarksideinitiative.com"
         }
     ],
     "proxiesList": [ 
